version/0.18/_sources/api/solver/_autosummary/settings/initialization.rst.txt
:orphan:

.. _initialization:

initialization
==============

.. autoclass:: ansys.fluent.core.solver.settings_232.initialization.initialization
    :show-inheritance:

.. rubric:: Attributes

======================================================   ================================================================================================

Attribute                                                                                                                                         Summary

======================================================   ================================================================================================
:ref:`initialization_type <initialization_type>`                                                                             'initialization_type' child.

:ref:`reference_frame <reference_frame_1>`                                                                      Set reference frame absolute or relative.

:ref:`defaults <defaults>`                                                                                                              'defaults' child.

:ref:`fmg_options <fmg_options>`                                                                                    Enter the full-multigrid option menu.

:ref:`localized_turb_init <localized_turb_init>`             Localized initialization of turbulent flow variables for VOF/Mixture multiphase flow models.

:ref:`hybrid_init_options <hybrid_init_options>`                                                     Enter the settings for hybrid initialization method.

:ref:`patch <patch>`                                                                                                                       'patch' child.

:ref:`open_channel_auto_init <open_channel_auto_init>`                                                             Open channel automatic initialization.

:ref:`fmg_initialization <fmg_initialization>`                                                      Enter the set full-multigrid for initialization menu.

======================================================   ================================================================================================

.. rubric:: Methods

==============================================================   =============================================================================================

Method                                                                                                                                                 Summary

==============================================================   =============================================================================================
:ref:`initialize <initialize>`                                                                                                           'initialize' command.

:ref:`compute_defaults <compute_defaults>`                                                                                         'compute_defaults' command.

:ref:`fmg_initialize <fmg_initialize>`                                                               Initialize using the full-multigrid initialization (FMG).

:ref:`standard_initialize <standard_initialize>`                                                    Initialize the flow field with the current default values.

:ref:`hybrid_initialize <hybrid_initialize>`                                                                Initialize using the hybrid initialization method.

:ref:`list_defaults <list_defaults>`                                                                                                      List default values.

:ref:`init_turb_vel_fluctuations <init_turb_vel_fluctuations>`                                                     Initialize turbulent velocity fluctuations.

:ref:`init_flow_statistics <init_flow_statistics>`                                                                                      Initialize statistics.

:ref:`show_iterations_sampled <show_iterations_sampled>`                                                                    'show_iterations_sampled' command.

:ref:`show_time_sampled <show_time_sampled>`                         Display the amount of simulated time covered by the data sampled for unsteady statistics.

:ref:`dpm_reset <dpm_reset>`                                                                                        Reset discrete phase source terms to zero.

:ref:`lwf_reset <lwf_reset>`                                                            Delete wall film particles and initialize wall film variables to zero.

:ref:`init_acoustics_options <init_acoustics_options>`                                                                       'init_acoustics_options' command.

:ref:`levelset_auto_init <levelset_auto_init>`                                                                                   'levelset_auto_init' command.

==============================================================   =============================================================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`solution <solution>`       'solution' child.

==========================   =====================

